Collection API улучшение.[#58167]