@@ -16,14 +16,15 @@ import static org.junit.Assert.assertThat;
  */
 
 public class ConvertMatrix2ListTest {
+    private ConvertMatrix2List list = new ConvertMatrix2List();
+
     @Test
     public void when2on2ArrayThenList4() {
-        ConvertMatrix2List list = new ConvertMatrix2List();
         int[][] input = {
                 {1, 2},
                 {3, 4}
         };
-        List<Integer> expect = Arrays.asList(
+        List<Integer> expect = List.of(
                 1, 2, 3, 4
         );
         List<Integer> result = list.toList(input);
@@ -32,12 +33,11 @@ public class ConvertMatrix2ListTest {
 
     @Test
     public void when2on2ArrayThenList6() {
-        ConvertMatrix2List list = new ConvertMatrix2List();
         int[][] input = {
                 {1, 2, 3},
                 {4, 5, 6}
         };
-        List<Integer> expect = Arrays.asList(
+        List<Integer> expect = List.of(
                 1, 2, 3, 4, 5, 6
         );
         List<Integer> result = list.toList(input);
@@ -46,13 +46,12 @@ public class ConvertMatrix2ListTest {
 
     @Test
     public void when2on2ArrayThenList() {
-        ConvertMatrix2List list = new ConvertMatrix2List();
         int[][] input = {
                 {1, 2, 3},
                 {4, 5, 6},
                 {7, 8, 9}
         };
-        List<Integer> expect = Arrays.asList(
+        List<Integer> expect = List.of(
                 1, 2, 3, 4, 5, 6, 7, 8, 9
         );
         List<Integer> result = list.toList(input);
